--- a/com.codebazaar/codebazaar_Apps/templates/partialFiles/navbar.ejs
+++ b/com.codebazaar/codebazaar_Apps/templates/partialFiles/navbar.ejs
@@ -1,19 +1,13 @@
-<!-- Important JS internal linkings -->
-<script src="../staticFiles/JavaScript files/header.js" type="text/javascript" async></script>
-
-<!-- =================
-       creating header 
-    ================= -->
-
+<!-- creating header Menubar -->
 <header class="head" id="head">
 
     <!-- left-header -->
     <div class="lft-menu" id="lft-menu">
-        <img src="../media/images/logo/logo HD.jpg" alt="logo" class="logo" id="logo">
+        <img src="/media_graphics/images/logo/logo HD.jpg" alt="logo" class="logo" id="logo">
         <span class="logo-txt" id="logo-txt">code bazaar</span>
     </div>
 
-    <!-- page - navigation -->
+    <!-- page-navigation -->
     <nav class="menu" id="menu">
         <div class="mid-menu" id="mid-menu">
             <a href="#" class="menu-items" id="home">home</a>
