--- a/com.codebazaar/codebazaar_Apps/templates/viewerFiles/home.ejs
+++ b/com.codebazaar/codebazaar_Apps/templates/viewerFiles/home.ejs
@@ -47,7 +47,7 @@
      partializing header section 
   ================================-->
 
-  <%- include('partialFiles/navbar') %>
+  <%- include('../partialFiles/navbar') %>
 
   <!-- ==============================
           Home Page section 
@@ -59,7 +59,7 @@
      partializing footer section 
   ================================-->
 
-  <%- include('partialFiles/footer') %>
+  <%- include('../partialFiles/footer') %>
 
 </body>
 
