--- a/com.codebazaar/codebazaar_Apps/templates/partialFiles/navbar.ejs
+++ b/com.codebazaar/codebazaar_Apps/templates/partialFiles/navbar.ejs
@@ -36,8 +36,8 @@
 
     <!-- lighting-modes -->
     <div class="modes" id="modes">
-        <i class="bi bi-toggle-on lights-mode dark"></i>
-        <i class="bi bi-toggle-off lights-mode light"></i>
+        <i class="bi bi-toggle-off lights-mode dark" id="dark"></i>
+        <i class="bi bi-toggle-on lights-mode light" id="light"></i>
     </div>
 
     <!-- menu-toggle button -->
