--- a/com.codebazaar/codebazaar_Apps/staticFiles/styleSheet files/phonemedia.css
+++ b/com.codebazaar/codebazaar_Apps/staticFiles/styleSheet files/phonemedia.css
@@ -7,6 +7,8 @@
         height: 80px;
     }
 
+    /* left-menubar */
+
     .head>.lft-menu img.logo {
         height: 65px;
         aspect-ratio: 1.1/1;
@@ -15,6 +17,8 @@
     .head>.lft-menu .logo-txt {
         font-size: 250%;
     }
+
+    /* main menubar */
 
     .menu {
         position: absolute;
@@ -25,7 +29,7 @@
         left: 0%;
         bottom: -110%;
         flex-flow: column;
-        height: calc(100% - 55px);
+        height: calc(100% - 80px);
         justify-content: center;
         backdrop-filter: blur(50px);
         animation: menu-slide 1s ease-out 1;
@@ -50,6 +54,7 @@
         width: 100%;
         color: white;
         padding: 1rem;
+        font-size: 200%;
         border-radius: 0%;
         border-bottom: 1px solid white;
     }
@@ -57,6 +62,7 @@
     .products-menu {
         color: #fff;
         padding: 1rem;
+        font-size: 200%;
         border-bottom: 1px solid white;
     }
 
@@ -65,7 +71,7 @@
     .head .ryt-menu a.highlights {
         margin: 0%;
         margin: 1rem 0;
-        font-size: 100%;
+        font-size: 200%;
         text-align: center;
         display: block;
     }
@@ -94,6 +100,8 @@
         padding: 0 1rem;
     }
 
+    /* left-menubar */
+
     .head>.lft-menu img.logo {
         height: 45px;
         aspect-ratio: 1.1/1;
@@ -101,6 +109,28 @@
 
     .head>.lft-menu .logo-txt {
         font-size: 160%;
+    }
+
+    /* main menubar */
+
+    .menu {
+         height: calc(100% - 55px);
+    }
+
+     /* middle-menubar */
+
+     .menu .mid-menu a.menu-items {
+        font-size: 110%;
+    }
+
+     .products-menu {
+        font-size: 110%;
+    }
+
+     /* right-menubar */
+
+    .head .ryt-menu a.highlights {
+        font-size: 100%;
     }
 
     /* document light modes */
