--- a/com.codebazaar/codebazaar_Apps/templates/viewerFiles/home.ejs
+++ b/com.codebazaar/codebazaar_Apps/templates/viewerFiles/home.ejs
@@ -11,55 +11,28 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Important CSS internal linkings -->
-  <link rel="stylesheet" href="/staticFiles/styleSheet files/codebazaar.css" type="text/css">
-  <link rel="stylesheet" href="/staticFiles/styleSheet files/desktopmedia.css" type="text/css">
-  <link rel="stylesheet" href="/staticFiles/styleSheet files/phonemedia.css" type="text/css">
-
-  <!-- Important JS internal linkings -->
-  <script src="/staticFiles/JavaScript files/common.js" type="text/javascript" async></script>
-  <script src="/staticFiles/JavaScript files/header.js" type="text/javascript" async></script>
-  <script src="/staticFiles/JavaScript files/footer.js" type="text/javascript" async></script>
-
-  <!-- important j-Query external linkings -->
-  <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-
-  <!-- Bootstrap external linkings -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-
-  <!-- Font-Awesome external linkings -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-  <!-- Google-fonts external linkings -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Berkshire+Swash&family=Bree+Serif&family=Butcherman&family=Carter+One&family=Creepster&family=Lilita+One&family=Merienda:wght@600&family=Monoton&family=Odibee+Sans&family=Oleo+Script+Swash+Caps&family=Poppins:wght@500&family=Rubik+Pixels&family=Russo+One&family=Share+Tech+Mono&family=Unbounded:wght@500&display=swap"
-    rel="stylesheet">
+  <!-- importing linkings -->
+  <%- include("../partialFiles/linking") %>
 
 </head>
 
 <body>
 
-  <!-- ==============================
-     partializing header section 
-  ================================-->
-
-  <%- include('../partialFiles/navbar') %>
+  <!-- partializing header section  -->
+  <%- include("../partialFiles/navbar") %>
 
   <!-- ==============================
-          Home Page section 
+        Home Page section begins
   ================================-->
 
-  <h1>Welcome to the Home Page</h1>
+  <big><strong><em>Welcome to the Home Page</em></strong></big>
 
   <!-- ==============================
-     partializing footer section 
+         Home Page section ends
   ================================-->
 
-  <%- include('../partialFiles/footer') %>
+  <!-- partializing footer section  -->
+  <%- include("../partialFiles/footer") %>
 
 </body>
 
