--- a/com.codebazaar/codebazaar_Apps/templates/partialFiles/footer.ejs
+++ b/com.codebazaar/codebazaar_Apps/templates/partialFiles/footer.ejs
@@ -19,7 +19,7 @@
         <div class="mail-contacts">
             <span class="mail" id="mail"> send your mail </span>
             <a href="mailto:spl.codebazaar@gmail.com" class="mail" id="mail">
-                <i class="bi bi-envelope"></i>
+                <i class="fa-solid fa-envelope-circle-check fa-shake"></i>
             </a>
         </div>
     </div>
