--- a/com.codebazaar/codebazaar_Apps/staticFiles/styleSheet files/codebazaar.css
+++ b/com.codebazaar/codebazaar_Apps/staticFiles/styleSheet files/codebazaar.css
@@ -60,7 +60,7 @@ body{
     aspect-ratio: 1.1/1;
     margin-right: .5rem;
     border-radius: .6rem;
-    box-shadow: 1px 1px 5px 2px #00000075;
+    box-shadow: 2px 1px 3px #00000061;
 }
 
 .head > .lft-menu .logo-txt {
