--- a/com.codebazaar/codebazaar_Apps/templates/partialFiles/linking.ejs
+++ b/com.codebazaar/codebazaar_Apps/templates/partialFiles/linking.ejs
@@ -2,6 +2,12 @@
      Internal & External Linkings
   ================================-->
 
+<!-- website brand icon linkings -->
+<link rel="apple-touch-icon" sizes="180x180" href="/media_graphics/images/icons/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/media_graphics/images/icons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/media_graphics/images/icons/favicon-16x16.png">
+<link rel="manifest" href="/media_graphics/images/icons/site.webmanifest">
+
 <!-- Important CSS internal linkings -->
 <link rel="stylesheet" href="/staticFiles/styleSheet files/codebazaar.css" type="text/css">
 <link rel="stylesheet" href="/staticFiles/styleSheet files/desktopmedia.css" type="text/css">
