--- a/com.codebazaar/codebazaar_Apps/staticFiles/styleSheet files/codebazaar.css
+++ b/com.codebazaar/codebazaar_Apps/staticFiles/styleSheet files/codebazaar.css
@@ -223,8 +223,9 @@ body{
 .logo-social img.logo {
     width: 40px;
     opacity: 0.7;
-    aspect-ratio: 1/1.1;
+    aspect-ratio: 1.1/1;
     border-radius: .5rem;
+    transform: scale(1.1);
     box-shadow: 3px 5px 3px #000000b6;
 }
 
