--- a/com.codebazaar/codebazaar_Apps/templates/viewerFiles/home.ejs
+++ b/com.codebazaar/codebazaar_Apps/templates/viewerFiles/home.ejs
@@ -25,7 +25,8 @@
         Home Page section begins
   ================================-->
 
-  <big><strong><em>Welcome to the Home Page</em></strong></big>
+  <%- include("../partialFiles/firstPanel") %>
+  
 
   <!-- ==============================
          Home Page section ends
