--- a/com.codebazaar/codebazaar_Apps/templates/viewerFiles/home.ejs
+++ b/com.codebazaar/codebazaar_Apps/templates/viewerFiles/home.ejs
@@ -26,6 +26,8 @@
   ================================-->
 
   <%- include("../partialFiles/firstPanel") %>
+  <%- include("../partialFiles/courses") %>
+  <%- include("../partialFiles/web_creations") %>
   
 
   <!-- ==============================
