--- a/com.codebazaar/codebazaar_Apps/staticFiles/styleSheet files/codebazaar.css
+++ b/com.codebazaar/codebazaar_Apps/staticFiles/styleSheet files/codebazaar.css
@@ -1,14 +1,20 @@
 /* =======RESETING CSS======= */
 
-*{
-    margin: 0%; padding: 0%;
-    box-sizing: border-box; 
+* {
+    margin: 0%;
+    padding: 0%;
+    box-sizing: border-box;
     cursor: pointer;
     outline: none;
-} 
+}
 
-a { text-decoration: none; }
-::-webkit-scrollbar { display: none; }
+a {
+    text-decoration: none;
+}
+
+::-webkit-scrollbar {
+    display: none;
+}
 
 
 
@@ -24,7 +30,7 @@ html {
 
 /* =======CONFIG-body CSS======= */
 
-body{
+body {
     width: 100vw;
     min-height: 100vh;
 }
@@ -43,19 +49,19 @@ body{
     padding: 0 3rem;
     align-items: center;
     justify-content: space-between;
-    background: linear-gradient(90deg ,#a90404, #000000d5);
+    background: linear-gradient(90deg, #a90404, #000000d5);
     font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
 }
 
 /* left-menubar */
 
-.head > .lft-menu {
+.head>.lft-menu {
     display: flex;
     flex-grow: 1;
     align-items: center;
 }
 
-.head > .lft-menu img.logo{
+.head>.lft-menu img.logo {
     height: 45px;
     aspect-ratio: 1.1/1;
     margin-right: .5rem;
@@ -63,7 +69,7 @@ body{
     box-shadow: 2px 1px 3px #00000061;
 }
 
-.head > .lft-menu .logo-txt {
+.head>.lft-menu .logo-txt {
     color: white;
     font-size: 160%;
     font-style: oblique;
@@ -86,7 +92,7 @@ body{
 
 /* main menubar (middle-menu) */
 
-.menu .mid-menu a.menu-items{
+.menu .mid-menu a.menu-items {
     transition: background .2s, color .2s;
     color: #ffffff;
     font-weight: bolder;
@@ -123,7 +129,7 @@ body{
     position: absolute;
     box-shadow: 1px 1px 5px #000000c2;
     display: none;
-    
+
 }
 
 .products-menu a.products-items {
@@ -170,7 +176,7 @@ body{
     font-size: 200%;
     margin-left: 1.2rem;
     text-shadow: 0 0 2px white;
-    
+
 }
 
 .head .modes .dark {
@@ -197,9 +203,10 @@ body{
 .bottom-nav {
     margin: auto;
     max-width: 1600px;
-    min-width: 300px; 
+    min-width: 300px;
     outline: 1px solid black;
-    display: flex; width: 100%;
+    display: flex;
+    width: 100%;
     padding: 3rem 3rem 3rem 3rem;
     justify-content: space-between;
     align-items: flex-start;
@@ -208,8 +215,8 @@ body{
 
 /* contact - navifations */
 
-.bottom-nav .contact-nav {   
-    padding-right: 3rem;   
+.bottom-nav .contact-nav {
+    padding-right: 3rem;
 }
 
 /* logo-social navigations */
@@ -219,8 +226,7 @@ body{
     justify-content: space-between;
 }
 
-.bottom-nav .contact-nav 
-.logo-social img.logo {
+.bottom-nav .contact-nav .logo-social img.logo {
     width: 40px;
     opacity: 0.7;
     aspect-ratio: 1/1.1;
@@ -228,14 +234,12 @@ body{
     box-shadow: 3px 5px 3px #000000b6;
 }
 
-.bottom-nav .contact-nav 
-.logo-social .social{
+.bottom-nav .contact-nav .logo-social .social {
     margin-left: 2rem;
     padding-top: .5rem;
 }
 
-.bottom-nav .contact-nav 
-.logo-social .social a {
+.bottom-nav .contact-nav .logo-social .social a {
     font-size: 130%;
     color: #000000;
     margin-left: 0.5rem;
@@ -248,7 +252,8 @@ body{
 /* mailing contacts navigations */
 
 .bottom-nav .contact-nav .mail-contacts {
-    display: flex; flex-wrap: nowrap;
+    display: flex;
+    flex-wrap: nowrap;
     margin-top: 2rem;
 }
 
@@ -279,7 +284,7 @@ body{
     text-transform: capitalize;
 }
 
-.bottom-nav .liscense-nav span{
+.bottom-nav .liscense-nav span {
     font-size: 90%;
     margin: 0% .5rem;
 }
@@ -319,61 +324,73 @@ body{
     color: white;
 }
 
-/* First Panel */
 
-.section{
+
+/* =======CONFIG-First Panel CSS======= */
+
+.section {
     align-items: center;
-     margin: 80px 0px;
-     justify-content: space-around;
+    margin: 80px 0px;
+    justify-content: space-around;
 }
 
- .leftsection{
- margin-left: 10%;
- font-size: 3rem;
+.leftsection {
+    margin-left: 10%;
+    font-size: 3rem;
 
 }
-.leftsection .btn{
-padding: 8px;
 
-background-color: lavender;
-color: rgb(158, 71, 240);
-border: 5px solid white;
-border-radius: 12px;
-font-size: 25px;
-cursor: pointer;
-}
-.leftsection .buttons{
-padding: 40px 0;
-}
-.leftsection .btn:hover{
-align-items: center;
-background-color: rgb(158, 71, 240) ;
-color:lavender;
-
-}
-.leftsection #element{
-font-size: 60px;
-}
-.purple{
-color: rgb(170, 107, 228);
-}
-.leftsection >h1{
-font-weight: 800;
-font-size: 50px;
-color: rgb(61, 60, 60);
-}
-.rightsection img{
-width: 85%;
-margin: 50px 0;
-}
-#element{
-color: rgb(170, 107, 228);
-font-weight: 700;
-font-size: 50px;
+.leftsection .btn {
+    padding: 8px;
+    background-color: lavender;
+    color: rgb(158, 71, 240);
+    border: 5px solid white;
+    border-radius: 12px;
+    font-size: 25px;
+    cursor: pointer;
 }
 
-/* Courses Section */
-.coursePanel{
+.leftsection .buttons {
+    padding: 40px 0;
+}
+
+.leftsection .btn:hover {
+    align-items: center;
+    background-color: rgb(158, 71, 240);
+    color: lavender;
+
+}
+
+.leftsection #element {
+    font-size: 60px;
+}
+
+.purple {
+    color: rgb(170, 107, 228);
+}
+
+.leftsection>h1 {
+    font-weight: 800;
+    font-size: 50px;
+    color: rgb(61, 60, 60);
+}
+
+.rightsection img {
+    width: 85%;
+    margin: 50px 0;
+}
+
+#element {
+    color: rgb(170, 107, 228);
+    font-weight: 700;
+    font-size: 50px;
+}
+
+
+
+/* =======CONFIG-Courses Section CSS======= */
+
+.coursePanel {
     background-color: #363030;
     padding-left: 2%;
     padding-right: 2%;
@@ -382,21 +399,23 @@ font-size: 50px;
 
 }
 
-.course{
+.course {
     width: 80%;
     margin: auto;
     height: auto;
     background-color: whitesmoke !important;
     text-align: center;
-    padding-top: 1ch ;
+    padding-top: 1ch;
 }
-.courseLogo{
+
+.courseLogo {
     width: 100px;
     height: 100px;
     display: block;
     margin: auto;
 }
-.preBuildPanel{
+
+.preBuildPanel {
     background-color: #363030;
     padding-left: 3%;
     padding-right: 3%;
@@ -405,18 +424,19 @@ font-size: 50px;
 
 }
 
-.pre_build_page{
+.pre_build_page {
     width: 70%;
     margin: auto;
     height: auto;
     background-color: whitesmoke !important;
     text-align: center;
-    padding-top: 1ch ;
+    padding-top: 1ch;
     font-size: 22px;
 }
-.pre_build_page_thumnail{
+
+.pre_build_page_thumnail {
     width: 20ch !important;
-    height: auto ; 
+    height: auto;
     display: block;
     margin: auto;
 }
