--- a/com.codebazaar/codebazaar_Apps/templates/partialFiles/firstPanel.ejs
+++ b/com.codebazaar/codebazaar_Apps/templates/partialFiles/firstPanel.ejs
@@ -25,7 +25,7 @@
     <div class="row">
       <div class="col-sm-7">
           <div class="rightsection">
-              <img src="/media_graphics/images/others/img01.png" alt="">
+              <img src="/media_graphics/images/others/panels/welcome cartoon 3d.png" alt="">
           </div>
       </div>
       
