--- a/com.codebazaar/codebazaar_Apps/templates/partialFiles/linking.ejs
+++ b/com.codebazaar/codebazaar_Apps/templates/partialFiles/linking.ejs
@@ -12,11 +12,11 @@
 <link rel="stylesheet" href="/staticFiles/styleSheet files/codebazaar.css" type="text/css">
 <link rel="stylesheet" href="/staticFiles/styleSheet files/desktopmedia.css" type="text/css">
 <link rel="stylesheet" href="/staticFiles/styleSheet files/phonemedia.css" type="text/css">
+<link rel="stylesheet" href="/staticFiles/styleSheet files/animations.css" type="text/css">
 
 <!-- Important JS internal linkings -->
-<script src="/staticFiles/JavaScript files/common.js" type="text/javascript" async></script>
-<script src="/staticFiles/JavaScript files/header.js" type="text/javascript" async></script>
-<script src="/staticFiles/JavaScript files/footer.js" type="text/javascript" async></script>
+<script src="/staticFiles/JavaScript files/otherFiles.js" type="text/javascript" async></script>
+<script src="/staticFiles/JavaScript files/navigations.js" type="text/javascript" async></script>
 
 <!-- important j-Query external linkings -->
 <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
