--- a/com.codebazaar/codebazaar_Apps/staticFiles/styleSheet files/codebazaar.css
+++ b/com.codebazaar/codebazaar_Apps/staticFiles/styleSheet files/codebazaar.css
@@ -33,6 +33,7 @@ html {
 body {
     width: 100vw;
     min-height: 100vh;
+    /* background: linear-gradient(-45deg, #160000, #160000); */
 }
 
 
@@ -42,10 +43,12 @@ body {
 .head {
     margin: auto;
     display: flex;
+    position: fixed;
     max-width: 1600px;
     min-width: 300px;
     width: 100%;
     height: 55px;
+    z-index: 10;
     padding: 0 3rem;
     align-items: center;
     justify-content: space-between;
