--- a/com.codebazaar/codebazaar_Apps/templates/partialFiles/courses.ejs
+++ b/com.codebazaar/codebazaar_Apps/templates/partialFiles/courses.ejs
@@ -21,10 +21,10 @@
     <div class="coursePanel mt-5 mb-5 pt-3 color-" >
       <p class="h1 text-white " style="margin-left: 20px;">Courses</p>
       <div class="row ms-3 pt-3 pb-3 ps-1 pe-1">
-        <div class="col-6 col-sm-2 p-1">
+        <div class="col-6 col-sm-2 p-1 mb-2">
           <div class="course card text-center" >
             <img
-              class="courseLogo card-img-top"
+              class="courseLogo "
               src="/media_graphics/images/others/courses/java_logo.png"
               alt="Card image"
               
@@ -38,10 +38,10 @@
             </div>
           </div>
         </div>
-        <div class="col-6 col-sm-2 p-1">
+        <div class="col-6 col-sm-2 p-1 mb-2">
           <div class="course card text-center" >
             <img
-              class="courseLogo"
+              class=" courseLogo"
               src="/media_graphics/images/others/courses/c++_logo.png"
               alt="Card image"
            
@@ -55,7 +55,24 @@
             </div>
           </div>
         </div>
-                
+        <div class="col-6 col-sm-2 p-1 mb-2">
+          <div class="course card text-center" >
+            <img
+              class="courseLogo "
+              src="/media_graphics/images/others/courses/node-js-logo.png"
+              alt="Card image"
+              
+            />
+
+            
+            <div class="card-body ">
+              <h4 class="card-title font-weight-bold">Node Js</h4>
+              <p class="card-text">A programming language</p>
+              <a href="#" class="learn_btn btn btn-outline-primary">Start Learning </a>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
   </body>
