--- a/com.codebazaar/codebazaar_Apps/templates/partialFiles/linking.ejs
+++ b/com.codebazaar/codebazaar_Apps/templates/partialFiles/linking.ejs
@@ -10,6 +10,7 @@
 
 <!-- Important CSS internal linkings -->
 <link rel="stylesheet" href="/staticFiles/styleSheet files/codebazaar.css" type="text/css">
+<link rel="stylesheet" href="/staticFiles/styleSheet files/entrylogo.css" type="text/css">
 <link rel="stylesheet" href="/staticFiles/styleSheet files/desktopmedia.css" type="text/css">
 <link rel="stylesheet" href="/staticFiles/styleSheet files/phonemedia.css" type="text/css">
 <link rel="stylesheet" href="/staticFiles/styleSheet files/animations.css" type="text/css">
