--- a/com.codebazaar/codebazaar_Apps/templates/viewerFiles/home.ejs
+++ b/com.codebazaar/codebazaar_Apps/templates/viewerFiles/home.ejs
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+  <%- include("../partialFiles/EntryLogo") %>
 
   <!-- partializing header section  -->
   <%- include("../partialFiles/navbar") %>
