--- a/com.codebazaar/codebazaar_Apps/partialFiles/courses.ejs
+++ b/com.codebazaar/codebazaar_Apps/partialFiles/courses.ejs
@@ -9,7 +9,7 @@
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 
     <!-- css file -->
-    <link rel="stylesheet" href="/com.codebazaar/staticFiles/codebazaar.css" />
+    <link rel="stylesheet" href="../assets/css/codebazaar.css" />
 
     <!-- Bootstrap Link -->
     <link
@@ -25,7 +25,7 @@
           <div class="course card text-center" >
             <img
               class="courseLogo "
-              src="/media_graphics/images/others/courses/java_logo.png"
+              src="../assets/images/others/courses/java_logo.png"
               alt="Card image"
               
             />
@@ -42,7 +42,7 @@
           <div class="course card text-center" >
             <img
               class=" courseLogo"
-              src="/media_graphics/images/others/courses/c++_logo.png"
+              src="../assets/images/others/courses/c++_logo.png"
               alt="Card image"
            
             />
@@ -59,7 +59,7 @@
           <div class="course card text-center" >
             <img
               class="courseLogo "
-              src="/media_graphics/images/others/courses/node-js-logo.png"
+              src="./assets/images/others/courses/node-js-logo.png"
               alt="Card image"
               
             />
