--- a/com.codebazaar/codebazaar_Apps/assets/css/entrylogo.css
+++ b/com.codebazaar/codebazaar_Apps/assets/css/entrylogo.css
@@ -1,34 +1,4 @@
-
-@keyframes logoanim {
-    0% {
-        background-size: 10%;
-        visibility: visible;
-        display: block;
-        background-color: rgb(255, 0, 0);
-    }
-
-    25% {
-        background-size: 25%;
-
-        display: block;
-    }
-
-            95% {
-                background-size: 60%;
-
-                display: block;
-            }
-
-            100% {
-                background-size: 60%;
-                opacity:0;
-                display: none;
-            }
-
-        }
-
-
-
+/* Entrance Logo */
 div.entrylogo {
     position: fixed;
     width: 100%;
@@ -42,8 +12,4 @@ div.entrylogo {
     z-index: 2;
     visibility: hidden;
     animation: logoanim 3s ease-in-out 500ms;
-    /* animation: logoanim 3s ease-in-out 500ms infinite; */
-
 }
-   
- 
