--- a/com.codebazaar/codebazaar_Apps/templates/home.ejs
+++ b/com.codebazaar/codebazaar_Apps/templates/home.ejs
@@ -12,22 +12,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- importing linkings -->
-  <%- include("../partialFiles/linking") %>
+  <%- include("./partialFiles/linking") %>
 
 </head>
 
 <body>
-  <%- include("../partialFiles/EntryLogo") %>
+
+  <!-- Entrance Animation -->
+  <%- include("./partialFiles/EntryLogo") %>
 
   <!-- partializing header section  -->
-  <%- include("../partialFiles/navbar") %>
+  <%- include("./partialFiles/navbar") %>
   <!-- ==============================
         Home Page section begins
   ================================-->
 
-  <%- include("../partialFiles/firstPanel") %>
-  <%- include("../partialFiles/courses") %>
-  <%- include("../partialFiles/web_creations") %>
+  <%- include("./partialFiles/firstPanel") %>
+  <%- include("./partialFiles/courses") %> 
+  <%- include("./partialFiles/web_creations") %> 
   
 
   <!-- ==============================
@@ -35,8 +37,8 @@
   ================================-->
 
   <!-- partializing footer section  -->
-  <%- include("../partialFiles/footer") %>
-    <%- include("../partialFiles/test")%>
+  <%- include("./partialFiles/footer") %>
+
 </body>
 
 </html>
