--- a/com.codebazaar/codebazaar_Apps/templates/partialFiles/linking.ejs
+++ b/com.codebazaar/codebazaar_Apps/templates/partialFiles/linking.ejs
@@ -3,21 +3,21 @@
   ================================-->
 
 <!-- website brand icon linkings -->
-<link rel="apple-touch-icon" sizes="180x180" href="./assets/images/icons/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="./assets/images/icons/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="./assets/images/icons/favicon-16x16.png">
-<link rel="manifest" href="./assets/images/icons/site.webmanifest">
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/icons/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/assets/images/icons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/assets/images/icons/favicon-16x16.png">
+<link rel="manifest" href="/assets/images/icons/site.webmanifest">
 
 <!-- Important CSS internal linkings -->
-<link rel="stylesheet" href="./assets/css/codebazaar.css" type="text/css">
-<link rel="stylesheet" href="./assets/css/entrylogo.css" type="text/css">
-<link rel="stylesheet" href="./assets/css/desktopmedia.css" type="text/css">
-<link rel="stylesheet" href="./assets/css/phonemedia.css" type="text/css">
-<link rel="stylesheet" href="./assets/css/animations.css" type="text/css">
+<link rel="stylesheet" href="/assets/css/codebazaar.css" type="text/css">
+<link rel="stylesheet" href="/assets/css/entrylogo.css" type="text/css">
+<link rel="stylesheet" href="/assets/css/desktopmedia.css" type="text/css">
+<link rel="stylesheet" href="/assets/css/phonemedia.css" type="text/css">
+<link rel="stylesheet" href="/assets/css/animations.css" type="text/css">
 
 <!-- Important JS internal linkings -->
-<script src="./assets/js/otherFiles.js" type="text/javascript" async></script>
-<script src="./assets/js/navigations.js" type="text/javascript" async></script>
+<script src="/assets/js/otherFiles.js" type="text/javascript" async></script>
+<script src="/assets/js/navigations.js" type="text/javascript" async></script>
 
 <!-- important j-Query external linkings -->
 <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
